# mdx-gen

./: .editorconfig  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  build.rs  codecov.yml  crates.js  deny.toml  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.cargo/: audit.toml
.githooks/: pre-push
.github/: CODEOWNERS
.github/workflows/: audit.yml  check.yml  ci.yml  document.yml  lint.yml  release.yml
benches/: markdown_benchmark.rs
crates/commons/: .gitignore  Cargo.toml  README.md
crates/commons/.github/workflows/: ci.yml
crates/commons/src/: collections.rs  config.rs  env.rs  error.rs  fs.rs  id.rs  lib.rs  logging.rs  retry.rs  time.rs  validation.rs
crates/commons/tests/: env_mutation.rs
crates/serde_yml/: Cargo.toml
crates/serde_yml/src/: de.rs
crates/serde_yml/tests/: integration.rs
crates/yaml_safe/: Cargo.toml
crates/yaml_safe/benches/: parse_bench.rs
crates/yaml_safe/src/: de.rs  error.rs  lib.rs  ser.rs
crates/yaml_safe/src/value/: mod.rs
crates/yaml_safe/src/with/: singleton_map.rs  singleton_map_recursive.rs
crates/yaml_safe/tests/: coverage.rs  integration.rs
examples/: alerts.rs  all.rs  basic.rs  basic_conversion.rs  basic_conversion_examples.rs  basic_example.rs  blog.rs  bulk.rs  cms.rs  diagrams.rs  docs.rs  error_examples.rs  errors.rs  errors_example.rs  examples.rs  extensions_example.rs  extensions_examples.rs  frontmatter_example.rs  gallery.rs  lib_examples.rs  markdown_examples.rs  pipe.rs  pipeline_example.rs  quickstart.rs  sanitizer_example.rs  search.rs  security.rs  site.rs  streaming.rs  streaming_example.rs  styling.rs  support.rs  theme_css_example.rs  toc_example.rs  typed.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: custom_blocks.rs  process_markdown.rs  sanitize_roundtrip.rs
mdx_gen/: all.html  index.html  sidebar-items.js  type.ComrakOptions.html
mdx_gen/error/: enum.MarkdownError.html  fn.parse_markdown_with_context.html  index.html  sidebar-items.js
mdx_gen/extensions/: enum.ColumnAlignment.html  enum.CustomBlockType.html  fn.apply_syntax_highlighting.html  fn.process_custom_blocks.html  fn.process_tables.html  index.html  sidebar-items.js
mdx_gen/markdown/: fn.default_markdown_options.html  fn.process_markdown.html  index.html  sidebar-items.js  struct.MarkdownOptions.html
search.desc/mdx_gen/: mdx_gen-desc-0-.js
src/: diagrams.rs  diagrams_hydrator.js  error.rs  extensions.rs  frontmatter.rs  highlight.rs  lib.rs  markdown.rs  validation.rs
src/mdx_gen/: error.rs.html  extensions.rs.html  lib.rs.html  markdown.rs.html
tests/: advanced_integration_tests.rs  integration_tests.rs  test_advanced_integration.rs  test_error.rs  test_extensions.rs  test_integration.rs  test_lib.rs  test_markdown.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
type.impl/comrak/parser/: struct.Options.js
