# -----------------------------------------------------------------------------
# MDX Gen - A robust Rust library for processing Markdown and converting it to HTML
# with support for custom blocks, enhanced table formatting, and flexible configuration options.
# -----------------------------------------------------------------------------

[workspace]
members = [".", "crates/yaml_safe"]
# The fuzz/ crate has its own [workspace] table and pulls in
# libfuzzer-sys, which we don't want in the main build graph.
exclude = ["fuzz"]
resolver = "2"

[package]
name = "mdx-gen"
version = "0.0.3"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = """
A robust Rust library for processing Markdown and converting it to HTML with support for custom blocks, enhanced table formatting, and flexible configuration options.
"""
homepage = "https://mdxgen.com/"
documentation = "https://mdxgen.com/documentation/index.html"
repository = "https://github.com/sebastienrousseau/mdx-gen"
readme = "README.md"
build = "build.rs"

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------

categories = [
    "command-line-utilities",
    "data-structures",
    "text-processing",
    "parsing",
    "development-tools"
]

keywords = ["markdown", "html", "generator", "mdx-gen", "static"]

# Exclude unnecessary files from the crate
exclude = [
    "/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"
]

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[dependencies]
ammonia = "4.1"
comrak = { version = "0.50", default-features = false }
html-escape = "0.2"
log = "0.4"
regex = "1.12"
yaml_safe = { path = "crates/yaml_safe", optional = true }
syntect = { version = "5.2", optional = true, default-features = false, features = ["default-themes", "default-syntaxes", "html", "regex-fancy"] }
thiserror = "2.0"

[build-dependencies]
version_check = "0.9"

[lib]
name = "mdx_gen"
path = "src/lib.rs"

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------

[features]
# Default feature set includes syntax highlighting.
default = ["syntax_highlighting"]

# Enable syntax highlighting using syntect
syntax_highlighting = ["syntect"]

# Enable YAML support
yaml_support = ["yaml_safe"]

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------

[dev-dependencies]
tempfile = "3.13"
assert_fs = "1.1"
predicates = "3.1"
criterion = "0.5"
# Needed only by `examples/blog.rs` so it can derive
# Deserialize/Serialize on the demo post struct. yaml_safe
# re-exports the traits but not the proc-macros, and yaml_safe
# already depends on serde with the "derive" feature, so this adds
# no new crate to the compile graph.
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "markdown_benchmark"
harness = false

# Explicitly declare examples whose compilation requires an optional
# feature. All other example files under `examples/` are picked up
# by Cargo's auto-discovery without further configuration.
[[example]]
name = "blog"
required-features = ["yaml_support"]

[profile.bench]
debug = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
