# -----------------------------------------------------------------------------
# MDX Gen - A robust Rust library for processing Markdown and converting it to HTML
# with support for custom blocks, enhanced table formatting, and flexible configuration options.
# -----------------------------------------------------------------------------

[workspace]
members = ["."]
# `crates/commons` and `crates/yaml_safe` are parked on disk as
# reference material for the upcoming EUXIS replacements; they are
# deliberately NOT workspace members so `cargo publish` sees a clean
# single-crate graph. The fuzz/ crate has its own [workspace] table
# and pulls in libfuzzer-sys, which we don't want in the main build.
exclude = ["fuzz", "crates/commons", "crates/yaml_safe"]
resolver = "2"

[package]
name = "mdx-gen"
version = "0.0.4"
edition = "2021"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
A robust Rust library for processing Markdown and converting it to HTML with support for custom blocks, enhanced table formatting, and flexible configuration options.
"""
homepage = "https://mdxgen.com/"
documentation = "https://mdxgen.com/documentation/index.html"
repository = "https://github.com/sebastienrousseau/mdx-gen"
readme = "README.md"
build = "build.rs"

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------

categories = [
    "command-line-utilities",
    "data-structures",
    "text-processing",
    "parsing",
    "development-tools"
]

keywords = ["markdown", "html", "generator", "mdx-gen", "static"]

# Exclude unnecessary files from the crate
exclude = [
    "/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"
]

# Examples share a `support.rs` helper module that is not itself a
# runnable example. Auto-discovery would try to compile it as one
# (and fail, because it has no `fn main()`), so each example is
# declared explicitly below.
autoexamples = false

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[dependencies]
ammonia = "4.1"
comrak = { version = "0.52", default-features = false }
html-escape = "0.2"
log = "0.4"
regex = "1.12"
syntect = { version = "5.2", optional = true, default-features = false, features = ["default-themes", "default-syntaxes", "html", "regex-fancy"] }
thiserror = "2.0"

[build-dependencies]
version_check = "0.9"

[lib]
name = "mdx_gen"
path = "src/lib.rs"

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------

[features]
# Default feature set: syntax highlighting. Users who want a minimal
# build can opt out with `--no-default-features` and then enable just
# the features they need.
default = ["syntax_highlighting"]

# Enable syntax highlighting using syntect
syntax_highlighting = ["syntect"]

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------

[dev-dependencies]
tempfile = "3.13"
assert_fs = "1.1"
predicates = "3.1"
criterion = "0.8"

[[bench]]
name = "markdown_benchmark"
harness = false

# ── Examples ──────────────────────────────────────────────────────
#
# `autoexamples = false` in the [package] table above disables
# auto-discovery so the shared `support.rs` helper is not compiled
# as a standalone example. Every example must therefore be
# declared here.

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "docs"
path = "examples/docs.rs"

[[example]]
name = "alerts"
path = "examples/alerts.rs"

[[example]]
name = "cms"
path = "examples/cms.rs"

[[example]]
name = "security"
path = "examples/security.rs"

[[example]]
name = "styling"
path = "examples/styling.rs"

[[example]]
name = "gallery"
path = "examples/gallery.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "pipe"
path = "examples/pipe.rs"

[[example]]
name = "search"
path = "examples/search.rs"

[[example]]
name = "bulk"
path = "examples/bulk.rs"

[[example]]
name = "errors"
path = "examples/errors.rs"

[[example]]
name = "diagrams"
path = "examples/diagrams.rs"

[[example]]
name = "all"
path = "examples/all.rs"

[profile.bench]
debug = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
