[package]
name = "yaml_safe"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust YAML serde implementation (no unsafe, no libyml)"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
indexmap = "2"

[lints.rust]
unsafe_code = "forbid"
